test/files/neg/macro-invalidimpl-i/Impls_1.scala
package foo

import scala.reflect.macros.Context

object Impls {
  private[foo] def impl(c: Context) = ???
}